Prodwork/atefwork/minIO/service-min.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniocsl
  namespace: shared-apps
spec:
  ports:
  - name: minio-console
    port: 9001
    protocol: TCP
    targetPort: minio-console
  selector:
    app.kubernetes.io/instance: minio-prx
    app.kubernetes.io/name: minio
  sessionAffinity: None
  type: LoadBalancer
