Prodwork/atefwork/minIO/ingress-minioedited.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: minio
 namespace: shared-apps
spec:
 ingressClassName: nginx-demo
 rules:
   - host: minioc.demo5.proxym-it.tn
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: minio-prx
             port:
               number: 9001
   - host: minioapi.demo5.proxym-it.tn
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: minio-prx
             port:
               number: 9000
